# archive_converter

./: .gitignore  CLAUDE.md  run_downloader.bat
dashboard/: .env.example  README.md  docker-compose.yml  process-compose.yaml
dashboard/backend/: .env.example  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  test_api.py
dashboard/backend/app/: __init__.py  config.py  main.py
dashboard/backend/app/models/: __init__.py
dashboard/backend/app/routers/: __init__.py  matching.py  nas.py  pattern.py  udm_viewer.py
dashboard/backend/app/schemas/: __init__.py  matching.py  nas.py
dashboard/backend/app/services/: __init__.py  mock_data.py  nas_service.py
docs/: API_ARCHITECTURE.md  API_DESIGN.md  NAS_SHEETS_INTEGRATION.md  PROJECT_STATUS.md  SHEETS_UDM_MAPPING_REPORT.md  UI-DESIGN-DASHBOARD.md  UI_MOCKUP.md  gemini.md
pokergo_downloader/: __init__.py  build.bat  build.py  docker-compose.yml  main.py  pokergo_downloader.spec  requirements.txt
prds/: PRD-0001-MASTER-ORCHESTRATOR.md  PRD-0002-INGEST-AGENT.md  PRD-0003-TRANSFORM-AGENT.md  PRD-0004-VALIDATE-AGENT.md  PRD-0005-EXPORT-AGENT.md  PRD-0006-PROFILE-MANAGER.md  PRD-0007-UDM-SCHEMA.md  PRD-0008-UDM-FINAL-SCHEMA.md  PRD-0009-SOURCE-DATA-SPEC.md  PRD-0010-DASHBOARD.md  PRD-0011-DASHBOARD-UI-RENEWAL.md  PRD-0012-POKERGO-DOWNLOADER-GUI.md  PRD-0012-UDM-MATRIX-VIEW.md  PRD-0013-POKERGO-WEB-APP.md  README.md
profiles/: README.md  profiles.yaml
scripts/: analyze_2003_matching.py  analyze_2003_matching_v2.py  analyze_2004_matching.py  analyze_2005_matching.py  analyze_2025_detail.py  (+71 more)
(+102 files in other folders)
